# agent01

./: .gitignore  CLAUDE.md  NEXT-STEPS.md  PLAN.md  PROGRESS.md  README.md  deploy-registry.json  feed.xml  git-graph.json  index.html  package.json  plan.md  wrangler.jsonc
.well-known/: atproto-did
_bakery/: index.html
ai-edu/: PROBLEM_TEMPLATE.md  index.html  tree.html  wrangler.jsonc
ai-edu/wasm/beam-solver/: Cargo.toml
ai-edu/wasm/beam-solver/src/: lib.rs
airchat/: .gitignore  README.md  index.html  whitelist.txt  worker.js  wrangler.jsonc
answers/: ask.html  categories.json  docs.html  index.html  question.html  wrangler.jsonc
ar/: bot.mjs  worker.js  wrangler.jsonc
arena/: DESIGN.md  index.html  vite.config.js  wrangler.jsonc
articles/: 2026-02-15-automated-clinic.html  2026-02-17-inside-genexpert-panel.html  2026-02-17-inside-genexpert.html  2026-02-19-cheyava-falls-panel.html  2026-02-19-cheyava-falls.html  2026-02-19-exobiology-field-survey.html  2026-02-20-msr-cancelled-panel.html  2026-02-20-msr-cancelled.html  2026-02-20-ocean-worlds-panel.html  2026-02-20-ocean-worlds.html  2026-02-22-contamination-panel.html  2026-02-22-contamination.html  2026-02-23-last-rung-panel.html  2026-02-23-last-rung.html
atmosphere/: index.html  wrangler.jsonc
atproto-data/: did-document.json  did-resolve.json  did.txt  lexicon-exchange.recipe.defs.json  lexicons-page.html  pds-endpoint.txt  recipe-exchange-handle.json  recipe-records-pds.json  recipe-records.json  (+4 more)
aub/game/: Cargo.toml  UPSTREAM_README.md
aub/game/.cargo/: config.toml
aub/game/assets/biomes/: doors.pxo
aub/game/assets/data/: creatures.json  items.json  props.json
aub/game/assets/i18n/: en-US.json
aub/game/assets/original/custodibot/: custodibot.pxo
aub/game/assets/original/grubus/: grubus.pxo
aub/game/assets/original/items/: ration_cube.pxo
aub/game/assets/props/: colonist.png.pxo  computer_terminal.pxo  cryo_tube.pxo  humanoid.pxo  locker.pxo  medkit.pxo  mutant.pxo  pixel_guy.pxo  storage_crate.pxo  survivor.pxo  wall_tiles_2.png.pxo
aub/game/src/: attributes.rs  audio.rs  classes.rs  dungeon.rs  fov.rs  hazards.rs  i18n.rs  input.rs  levelgen.rs  main.rs  props.rs  recipes.rs  save.rs  status.rs  stock.rs  telemetry.rs  tileset.rs  ui.rs
aub/game/src/creatures/: mod.rs
aub/game/src/generator/: caves.rs  maze_rooms.rs  mod.rs  rooms.rs  sector.rs
aub/game/src/items/: mod.rs  weapons.rs
aub/game/src/render/: pixel.rs
biome/cycles/solver/: Cargo.toml
biome/cycles/solver/pkg/: biome_stability.d.ts  biome_stability.js  biome_stability_bg.wasm  biome_stability_bg.wasm.d.ts
biome/cycles/solver/src/: lib.rs
fable/flux/engine-rs/: Cargo.toml
fable/flux/engine-rs/src/: lib.rs  main.rs
flights/crates/flight-solver/: Cargo.toml
flights/crates/flight-solver-wasm/: Cargo.toml
flights/crates/flight-solver-wasm/src/: lib.rs
flights/crates/flight-solver/src/: lib.rs
font/: .gitignore  Cargo.toml  README.md  worker.js  wrangler.jsonc
font/examples/: specimen.rs
font/site/: app.js  index.html
font/src/: geom.rs  params.rs
font/tests/: valid.rs
hoop-backend/: .gitignore  CLAUDE.md  INTEGRATION.md  PROVENANCE.md  README.md  kill_port.sh  pyproject.toml
hoop-backend/agents/: chat.py  letta_client.py  player_agent.py  player_tools.py  world_agent.py  world_tools.py
hoop-backend/docs/: CLIENT-ANSWERS.md  SHARED-BACKEND.md  content-authoring-plan.md  gameplay-engine-plan.md
hoop-backend/ingestion/: auto_qa.py  chapter1_bible.md  embedder.py  pregen_pass.py  tier_labeler.py  world_parser.py
hoop-backend/lib/: llm.py  log.py
hoop-backend/poller/: cascade.py  job_handlers.py  poller.py  replenishment.py  world_tick.py
hoop-backend/prototype/: client.css  client.html  client.js  full_demo.py  seed_run.py  tiny_world.md
hoop-backend/review/: review_api.py  review_ui.css  review_ui.html  review_ui.js
hoop-backend/runtime/: dialogue.py  dialogue_validate.py  dispatcher.py  equipment.py  gate_reachability.py  inventory.py  local_api.py  notifications.py  placement.py  state_gate.py  world_map.py
hoop-backend/scripts/: add_tier_ladders.py  approve_all.py  dedupe_pool.py  export_site.py  generate.py  playtester.py  reembed_bible.py  repair_content.py  reset_world.py  validate_dialogue.py  validate_gates.py
hoop-backend/storage/: content_normalize.py  content_store.py  schema.sql
hoop-backend/tests/: conftest.py  test_async.py  test_cascade.py  test_content_normalize.py  test_dialogue.py  test_dialogue_validate.py  test_gate_reachability.py  test_generation.py  test_hot_path.py  test_inventory.py  test_playtester.py  test_pool.py  test_pure.py  test_state_gate.py  test_stateful.py  test_world_evolution.py
j/wasm/: Cargo.toml
j/wasm/src/: lib.rs
mappa/engine-rs/: Cargo.toml
mappa/engine-rs/src/: lib.rs
os/crates/codescan-ocr/: Cargo.toml  README.md
os/crates/codescan-ocr/examples/: smoke.rs
os/crates/codescan-ocr/src/: lib.rs
phylofiction/engine-rs/: Cargo.toml
phylofiction/engine-rs/src/: lib.rs
rind/solver/cylinder-solver/: Cargo.toml
rind/solver/cylinder-solver/examples/: compare.rs
rind/solver/cylinder-solver/src/: lib.rs
scripts/sync-finance-rs/: Cargo.toml
scripts/sync-finance-rs/src/: fetchers.rs  main.rs  pds.rs  universe.rs
splice/engine/: Cargo.toml  author-levels.mjs
splice/engine/src/: lib.rs
tjs/dragon/solver/dragon-solver-wasm/: Cargo.toml
tjs/dragon/solver/dragon-solver-wasm/src/: lib.rs
tjs/kite/solver/kite-solver/: Cargo.toml
tjs/kite/solver/kite-solver-wasm/: Cargo.toml
tjs/kite/solver/kite-solver-wasm/src/: lib.rs
tjs/kite/solver/kite-solver/src/: lib.rs
vault/crates/sealed-record/: Cargo.toml
vault/crates/sealed-record/src/: envelope.rs  lib.rs
vault/crates/sealed-record/src/records/: crm.rs  mail.rs  mod.rs  tasks.rs
wave/crates/wave-md/: Cargo.toml
wave/crates/wave-md/src/: lib.rs  render.rs
wave/crates/wave-md/src/canvas/: edit.rs  layout.rs  mod.rs  painter.rs  theme.rs
wave/crates/wave-md/src/plugins/: dataview.rs  embeds.rs  kanban.rs  mod.rs  template.rs  wikilink.rs
(+3830 files in other folders)
