[package]
name = "minofont"
version = "0.1.0"
edition = "2021"
description = "Seeded parametric typeface generator that emits real, openly-licensed .ttf files"
license = "CC0-1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
ttf-parser = "0.20"

[profile.release]
opt-level = "s"
lto = true
