[package]
name = "splice-engine"
version = "0.1.0"
edition = "2021"
description = "Deterministic molecular-biology engine for splice.mino.mobi (Phase 2): restriction mapping, digest, in-silico PCR, translation/ORFs. No C deps -> clean WASM."

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
strip = true
