[package]
name = "biome_stability"
version = "0.1.0"
edition = "2021"
description = "Community-matrix stability solver for the biome closed-ecosystem model"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
