[package]
name = "flight-solver-wasm"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen JSON wrapper around flight-solver for the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flight-solver = { path = "../flight-solver" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
strip = true
