[package]
name = "codescan-ocr"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust OCR for photo.mino.mobi/codescan — extract text (e.g. activation codes) from images, compiled to WASM."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.122"
ocrs = "0.12"
rten = "0.24"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
