[package]
name = "sealed-record"
version = "0.1.0"
edition = "2021"
description = "DAG-CBOR codec for vault sealed records — serialize/deserialize inner records and build/parse encrypted envelopes"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
base64 = "0.22"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
