[package]
name = "dragon-solver-wasm"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen JSON wrapper around dragon-solver for the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dragon-solver = { path = "../dragon-solver" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
strip = true
